# hipcl-samples

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/BabelStream/: CMakeLists.txt  HIPStream.cpp  HIPStream.h  Stream.h  main.cpp
src/PolyBench/: CMakeLists.txt  README.md
src/PolyBench/2mm/: 2mm.cu  CMakeLists.txt  Makefile
src/PolyBench/3mm/: 3mm.cu  CMakeLists.txt  Makefile
src/PolyBench/adi/: CMakeLists.txt  Makefile  adi.cu
src/PolyBench/atax/: CMakeLists.txt  Makefile  atax.cu
src/PolyBench/bicg/: CMakeLists.txt  Makefile  bicg.cu
src/PolyBench/convolution-2d/: 2DConvolution.cu  CMakeLists.txt  Makefile
src/PolyBench/convolution-3d/: 3DConvolution.cu  CMakeLists.txt  Makefile
src/PolyBench/correlation/: CMakeLists.txt  Makefile  correlation.cu
src/PolyBench/covariance/: CMakeLists.txt  Makefile  covariance.cu
src/PolyBench/doitgen/: CMakeLists.txt  Makefile  doitgen.cu
src/PolyBench/fdtd-2d/: CMakeLists.txt  Makefile  fdtd2d.cu
src/PolyBench/gemm/: CMakeLists.txt  Makefile  gemm.cu
src/PolyBench/gemver/: CMakeLists.txt  Makefile  gemver.cu
src/PolyBench/gesummv/: CMakeLists.txt  Makefile  gesummv.cu
src/PolyBench/gramschmidt/: CMakeLists.txt  Makefile  gramschmidt.cu
src/PolyBench/jacobi-1d-imper/: CMakeLists.txt  Makefile  jacobi1D.cu
src/PolyBench/jacobi-2d-imper/: CMakeLists.txt  Makefile  jacobi2D.cu
src/PolyBench/lu/: CMakeLists.txt  Makefile  lu.cu
src/PolyBench/mvt/: CMakeLists.txt  Makefile  mvt.cu
src/PolyBench/syr2k/: CMakeLists.txt  Makefile  syr2k.cu
src/PolyBench/syrk/: CMakeLists.txt  Makefile  syrk.cu
src/PolyBench/utilities/: common.mk
src/aes/: CMakeLists.txt  aes.cpp
src/atomics/: CMakeLists.txt  atomicIntrinsics.cpp  common.h  cpu.cpp  reduce_DP.cpp  reduce_SP.cpp
src/chemv/: CMakeLists.txt  main_host.cpp  main_kernel.cpp  main_kernel.h
src/clenergy/: CMakeLists.txt  README  clenergy.cpp
src/finance-apps/: CMakeLists.txt
src/finance-apps/BlackScholesEngine/: CMakeLists.txt  blackScholesAnalyticEngine.cu  blackScholesAnalyticEngineKernels.cu  blackScholesAnalyticEngineKernels.cuh  blackScholesAnalyticEngineKernelsCpu.cu  blackScholesAnalyticEngineKernelsCpu.cuh  blackScholesAnalyticEngineStructs.cuh  errorFunctConsts.cuh
src/finance-apps/BondsEngine/: CMakeLists.txt  bondsEngine.cu  bondsKernelsCpu.cu  bondsKernelsCpu.cuh  bondsKernelsGpu.cu  bondsKernelsGpu.cuh  bondsStructs.cuh
src/finance-apps/RepoEngine/: CMakeLists.txt  repoEngine.cu  repoKernels.cu  repoKernels.cuh  repoKernelsCpu.cu  repoKernelsCpu.cuh  (+1 more)
src/gpu-burn/: AmdGpuMonitor.cpp  AmdGpuMonitor.h  BurnKernel.cpp  BurnKernel.h  CMakeLists.txt  GpuMonitor.h  common.cpp  common.h  gpuburn.cpp
src/heat/: CMakeLists.txt  heat.cpp
src/memcpy-perf/: CMakeLists.txt  main.cpp
src/mixbench/: CMakeLists.txt  lhiputil.h  main_hip.cpp  main_hip_ro.cpp  mix_kernels_hip.cpp  mix_kernels_hip.h  mix_kernels_hip_ro.cpp
src/mnist/: CMakeLists.txt  Network.cpp  Network.h  Node.cpp  Node.h  README.md  main.cpp
src/montecarlo/: CMakeLists.txt  README.txt  monteCarloConstants.h  monteCarloEngine.cpp  monteCarloKernels.h  monteCarloKernelsCpu.c  monteCarloKernelsCpu.h  monteCarloKernelsGpu.cpp  monteCarloStructs.h  mt19937.h
src/motionsim/: CMakeLists.txt  motionsim.cpp
src/multimaterial/: CMakeLists.txt  compact.hip.cpp  full_matrix.cpp  multimat.cpp
src/nbody/: CMakeLists.txt  Compute.cpp  GSimulation.cpp  GSimulation.hpp  Particle.hpp  cpu_time.hpp  main.cpp  types.hpp
src/quicksilver/: AtomicMacro.hh  BulkStorage.hh  CMakeLists.txt  CollisionEvent.cc  CollisionEvent.hh  CommObject.hh  CoralBenchmark.cc  CoralBenchmark.hh  CycleTracking.cc  CycleTracking.hh  DeclareMacro.hh  DecompositionObject.cc  DecompositionObject.hh  DirectionCosine.cc  DirectionCosine.hh  EnergySpectrum.cc  EnergySpectrum.hh  FacetPair.hh  GlobalFccGrid.cc  GlobalFccGrid.hh  Globals.hh  GridAssignmentObject.cc  GridAssignmentObject.hh  IndexToTuple.hh  IndexToTuple4.hh  InputBlock.cc  InputBlock.hh  MCT.cc  MCT.hh  MC_Adjacent_Facet.cc  MC_Base_Particle.cc  MC_Base_Particle.hh  MC_Cell_State.hh  MC_Distance_To_Facet.hh  MC_Domain.cc  MC_Domain.hh  MC_Facet_Adjacency.hh  MC_Facet_Crossing_Event.cc  MC_Facet_Crossing_Event.hh  MC_Facet_Geometry.hh  (+74 more)
src/raytrace/: CMakeLists.txt  main.cpp
src/reduction_atomic/: CMakeLists.txt  reduction.cpp
src/rng-wallace/: CMakeLists.txt  constants.h  rand_helpers.cpp  rand_helpers.h  rng_kernel.cpp  rng_options.cpp  wallace_kernel.cpp
src/stencil/: CMakeLists.txt  stencil_1d.cpp
src/vote/: CMakeLists.txt  readme.txt  vote.cpp  vote_kernel.h
